--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,10 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
-              }
+              },
+              "src/firebase-messaging-sw.js"
             ],
+
             "styles": ["src/global.scss", "src/theme/variables.scss", "node_modules/swiper/swiper-bundle.min.css"],
             "scripts": [],
             "browser": "src/main.ts"
