--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "event-source-polyfill": "^1.0.31",
+    "firebase": "^11.9.1",
     "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.7",
